AC_PREREQ([2.69])
AC_INIT([ps4-wake], [1.1])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([ps4-wake.c])
AC_CONFIG_HEADERS([config.h])
#AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CC([gcc cc])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
